# bevy_resvg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENCE-MIT  README.md  cliff.toml  release.toml  sumi.toml
examples/: simple.rs  zoom.rs
src/: component.rs  error.rs  lib.rs  plugin.rs  prelude.rs
src/asset/: loader.rs  mod.rs
src/raster/: component.rs  mod.rs  plugin.rs
src/raster/asset/: loader.rs  mod.rs
src/vector/: mod.rs  plugin.rs
src/vector/asset/: loader.rs  mod.rs
