[package]
name = "bevy_resvg"
authors = ["Theodore Bjernhed <uik1475@edu.kunskapsskolan.se>"]
edition = "2024"
version = "0.0.0"
readme = "README.md"
repository = "https://github.com/theodorebje/bevy_resvg"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_sprite_render",
    "std",
] }
resvg = ">=0.42, ^0.46"
thiserror = ">=1.0.0, <3.0.0"

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "default_platform",
] }

[lints.clippy]
needless_pass_by_value = { priority = 1, level = "allow" } # Bevy freaks out over references
nursery = "deny"
pedantic = "deny"
type_complexity = { priority = 1, level = "allow" }        # Bevy queries are inherently complex
