[package]
authors = ["Theodore Bjernhed <uik1475@edu.kunskapsskolan.se>"]
categories = ["game-development", "graphics", "multimedia::images", "rendering"]
description = "A simple library for rendering SVGs in Bevy using the amazing Resvg library."
edition = "2024"
keywords = ["bevy", "gamedev", "graphics", "render", "svg"]
license = "MIT OR Apache-2.0"
name = "bevy_resvg"
exclude = ["sumi.toml"]
readme = "README.md"
repository = "https://github.com/theodorebje/bevy_resvg"
rust-version = "1.89"
version = "1.0.0"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_log",
    "bevy_sprite_render",
    "std",
] }
resvg = ">=0.42, ^0.46"
thiserror = ">=1.0.0, <3.0.0"

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "default_platform",
] }

[lints.clippy]
needless_pass_by_value = { priority = 1, level = "allow" } # Bevy freaks out over references
nursery = "deny"
pedantic = "deny"
type_complexity = { priority = 1, level = "allow" }        # Bevy queries are inherently complex
